@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 255230fc3328b902524dd858054d7c6ffc8fdb35 ChangeLog
+SHA1 b5b2fc5d08c30ee7b8b161853bfb3e1beb2cedf0 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 674cc0a12c406ffcc0394f2969230f45774013e1 META.yml
+SHA1 b4c79a8275e5c521ad3b75601893de2e9bc8a3d3 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 5a42122946927aa1506b5ac2df5a595483158f3b lib/Term/Menus.pm
+SHA1 b58adab602f372bbdd7cfe7c46e76f982d7125bd lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAk9h8KQACgkQJM3IZYB6aOo+XwCeLTTA2t/TL5DpxMdCEdznSfn9
-nZYAn3pWPYENW/WCFfAG3C2KBUwD0Rhu
-=HnO5
+iEYEARECAAYFAk+azOQACgkQJM3IZYB6aOqAFgCfbkSa0cp3eR18Z/XDieFjsXZw
+R9AAoJqIya2eCuLQMaov/HqDDRZMyi1r
+=RlvR
 -----END PGP SIGNATURE-----
