@@ -1,3 +1,10 @@
+2012-04-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.15 released.
+
+        * Fixed code for selecting fa_menu for FullAuto.
+
+
 2012-03-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.14 released.
